# yamc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-python.yml  ci-rust.yml
docs/source/: conf.py  developer_info.md  installation.md  python_api.md  python_usage.md  rust_api.md  webassembly.md
examples/python/: compare_data_sources_for_materials.py  compare_data_sources_for_nuclides.py  compare_macroscopic_reaction.py  compare_macroscopic_total_to_openmc.py  compare_macroscopic_two_nuclides_reaction.py  compare_mean_free_path_to_openmc.py  compare_microscopic_reaction.py  flux.py  geometry_cube.py  material_example.py  materials_example.py  nuclide_example.py  plot_inelastic_xs.py  tbr-openmc.py  tbr.py  transport_example.py  usage_in_python.py  usage_in_python_cube.py  use_in_python.py
examples/rust/: Cargo.toml  flux_example.rs  materials_demo.rs  tbr.rs  test_real_sampling.rs  test_sampling.rs
examples/rust/src/: main.rs
src/: bank.rs  bounding_box.rs  cell.rs  config.rs  config_python.rs  data.rs  fast_rng.rs  filter.rs  filters.rs  geometry.rs  inelastic.rs  lib.rs  material.rs  material_python.rs  materials.rs  materials_python.rs  model.rs  nonelastic.rs  nuclide.rs  nuclide_hdf5.rs  particle.rs  physics.rs  reaction.rs  reaction_product.rs  reaction_product_python.rs  reaction_product_sampling_docs.rs  region.rs  scatter.rs  secondary_correlated.rs  secondary_kalbach.rs  secondary_uncorrelated.rs  settings.rs  source.rs  stats.rs  surface.rs  tally.rs  url_cache.rs  utilities.rs
src/python/: angle_energy_distribution_python.rs  bounding_box_python.rs  cell_python.rs  config_python.rs  data_python.rs  distribution_multi_python.rs  element_python.rs  energy_distribution_python.rs  filter_python.rs  filters_python.rs  geometry_python.rs  material_python.rs  materials_python.rs  model_python.rs  nuclide_python.rs  particle_python.rs  reaction_product_python.rs  reaction_python.rs  region_python.rs  secondary_correlated_python.rs  secondary_kalbach_python.rs  secondary_uncorrelated_python.rs  serde_json_utils_python.rs  settings_python.rs  source_python.rs  stats_python.rs  surface_python.rs  tally_python.rs
src/tallies/: filter.rs  filter_cell.rs  filter_energy.rs  filter_material.rs  mod.rs  tally.rs
src/wasm/: config_wasm.rs  data_wasm.rs  element_wasm.rs  material_wasm.rs  nuclide_wasm.rs  reaction_wasm.rs
tests/: Be9.json  Cr52.h5  Fe54.h5  Fe54.json  Fe56.h5  Fe57.h5  Fe58.h5  Li6.h5  Li6.json  Li7.h5  Li7.json  Pb208.h5  Pb208.json  absorption_leakage_filters.rs  reproducibility.rs  test_atoms_per_cc.py  test_batch_variation.rs  test_bounding_box.py  test_cell.py  test_cell_closest_surface.py  test_cell_distance.py  test_cell_fill.py  test_closest_surface_debug.py  test_config.py  test_data.py  test_distribution_structure_exposure.py  test_duplicate_filter_validation.py  test_element.py  test_filters.py  test_flux_tally.rs  test_geometry.py  test_inelastic.rs  test_macroscopic_xs.py  test_material.py  test_model.py  test_new_format.py  test_nuclide.py  test_openmc_source_api.py  test_pb208_products.rs  test_products_loading.rs  (+13 more)
tests/intergration_tests/: __init__.py  test_absorption_leakage_filters.py  test_detailed_mt_sampling.py  test_elastic_scatter_only.rs  test_reproducibility.py
