[package]
name = "materials_for_mc"
version = "0.2.0"
edition = "2021"
description = "Material builder for Monte Carlo simulations"
license = "MIT"

[lib]
name = "materials_for_mc"
crate-type = ["cdylib", "rlib"]
# Keep the path the same
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"], optional = true  }
once_cell = "1.19"
nalgebra = "0.32"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ['console'], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optional: for building wheels
[package.metadata.maturin]
python-source = "python"

[features]
# Define the pyo3 feature
default = []
download = ["dep:reqwest", "dep:dirs"]
pyo3 = ["dep:pyo3", "download"]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen"
]
wasm-test = ["wasm"]

[[example]]
name = "test_sampling"
path = "examples/rust/test_sampling.rs"

[[example]]
name = "test_real_sampling"
path = "examples/rust/test_real_sampling.rs"

[[example]]
name = "materials_demo"
path = "examples/rust/materials_demo.rs"

[[example]]
name = "tbr"
path = "examples/rust/tbr.rs"

[[example]]
name = "flux_example"
path = "examples/rust/flux_example.rs"
